--- a/Test/index.html
+++ b/Test/index.html
@@ -8,7 +8,12 @@
 <body>
 
   <section>
-    <div class="container-lg my-2"></div>
+    <div class="container-lg my-2">
+      <div class="text-center">
+        <h2>Hello this is practice</h2>
+        <p>Npm Bootstrap</p>
+      </div>
+    </div>
   </section>
   
 </body>
