--- a/Test/index.html
+++ b/Test/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <section>
-    <div class="container-lg my-2">
+    <div class="container-lg my-2 bg-primary">
       <div class="text-center">
         <h2>Hello this is practice</h2>
         <p>Npm Bootstrap</p>
