--- a/Test/index.html
+++ b/Test/index.html
@@ -17,7 +17,9 @@
     </div>
 
     <div class="row justify-content-center align-items-center">
-      
+      <div class="col-md-block col-xl-5">
+        
+      </div>
     </div>
   </section>
   
