--- a/Test/index.html
+++ b/Test/index.html
@@ -18,7 +18,7 @@
 
     <div class="row justify-content-center align-items-center">
       <div class="col-md-block col-xl-5">
-        
+        <img src="" alt="Image" class="img-fluid">
       </div>
     </div>
   </section>
