--- a/Test/index.html
+++ b/Test/index.html
@@ -20,6 +20,10 @@
       <div class="col-md-block col-xl-5">
         <img src="" alt="Image" class="img-fluid">
       </div>
+
+      <div class="col-8 col-xl-7">
+        <h2>Hello This is Practice</h2>
+      </div>
     </div>
   </section>
   
