--- a/Test/index.html
+++ b/Test/index.html
@@ -23,6 +23,7 @@
 
       <div class="col-8 col-xl-7">
         <h2>Hello This is Practice</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minima non alias sint aut ipsam.</p>
       </div>
     </div>
   </section>
