--- a/Test/index.html
+++ b/Test/index.html
@@ -18,7 +18,7 @@
 
     <div class="row justify-content-center align-items-center">
       <div class="col-md-block col-xl-5">
-        <img src="https://i.pinimg.com/564x/22/93/ed/2293eddf8dd220cc2ec7cad9a53b3f32.jpg" alt="Image" class="img-fluid">
+        <img src="https://i.pinimg.com/564x/22/93/ed/2293eddf8dd220cc2ec7cad9a53b3f32.jpg" alt="Image" class="img-fluid" style="width: 250px;">
       </div>
 
       <div class="col-8 col-xl-7">
