--- a/Test/index.html
+++ b/Test/index.html
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <iframe src="https://drive.google.com/file/d/1Zzd2jwoAnSUnr65eZ_mlbyUMpdcCr-54/preview" width="640" height="480" allow="autoplay"></iframe>g
+    <iframe src="https://drive.google.com/file/d/1Zzd2jwoAnSUnr65eZ_mlbyUMpdcCr-54/preview" width="640" height="480" allow="autoplay"></iframe>
   </section>
   
 
